@@ -17,7 +17,7 @@
    | PHP 4.0 patches by Zeev Suraski <zeev@zend.com>                      |
    +----------------------------------------------------------------------+
  */
-/* $Id: mod_php4.c,v 1.26 1999/09/16 23:18:15 zeev Exp $ */
+/* $Id: mod_php4.c,v 1.27 1999/09/20 11:54:06 zeev Exp $ */
 
 #include "httpd.h"
 #include "http_config.h"
@@ -362,16 +362,20 @@ static void copy_per_dir_entry(php_per_dir_entry *per_dir_entry)
 	per_dir_entry->value[per_dir_entry->value_length] = 0;
 }
 
-/*
- * Create the per-directory config structure with defaults
- */
+
+static void php_destroy_per_dir_info(HashTable *per_dir_info)
+{
+	zend_hash_destroy(per_dir_info);
+	free(per_dir_info);
+}
+
 static void *php_create_dir(pool *p, char *dummy)
 {
 	HashTable *per_dir_info;
 
 	per_dir_info = (HashTable *) malloc(sizeof(HashTable));
 	zend_hash_init(per_dir_info, 5, NULL, (int (*)(void *)) destroy_per_dir_entry, 1);
-	register_cleanup(p, (void *) per_dir_info, (void (*)(void *)) zend_hash_destroy, (void (*)(void *)) zend_hash_destroy);
+	register_cleanup(p, (void *) per_dir_info, (void (*)(void *)) php_destroy_per_dir_info, (void (*)(void *)) zend_hash_destroy);
 
 	return per_dir_info;
 }
